# mbuild

./: .clang-format  CMakeLists.txt  build.lua
include/: api.hpp  build_context.hpp  build_data.h  build_graph.hpp  build_rules.hpp  dbg_emitter.hpp  emit.hpp  global_config.hpp  graph.h  idtable.h  rule.hpp  table.h  terminal.hpp  utils.hpp
lua/: core.lua
lua_stubs/: core_api.lua  fs_api.lua
src/: api.cc  build.cc  build_context.cc  build_graph.cc  build_rules.cc  configure.cc  dbg_emitter.cc  evaluate.cc  main.cc
